--- a/application/user/view/domain/domain/edit.html
+++ b/application/user/view/domain/domain/edit.html
@@ -1,15 +1,9 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('User_id')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-user_id" data-rule="required" min="0" data-source="user/user/index" data-field="nickname" class="form-control selectpage" name="row[user_id]" type="text" value="{$row.user_id|htmlentities}">
-        </div>
-    </div>
-    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Group_id')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-group_id" data-rule="required" min="0" data-source="group/index" class="form-control selectpage" name="row[group_id]" type="text" value="{$row.group_id|htmlentities}">
+            <input id="c-group_id" data-rule="required" min="0" data-source="domain/group/index" class="form-control selectpage" name="row[group_id]" type="text" value="{$row.group_id|htmlentities}">
         </div>
     </div>
     <div class="form-group">
@@ -18,18 +12,7 @@
             <input id="c-domain" data-rule="required" class="form-control" name="row[domain]" type="text" value="{$row.domain|htmlentities}">
         </div>
     </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Dns_id')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-dns_id" data-rule="required" data-source="dns/index" class="form-control selectpage" name="row[dns_id]" type="text" value="{$row.dns_id|htmlentities}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Dns')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-dns" class="form-control" name="row[dns]" type="text" value="{$row.dns|htmlentities}">
-        </div>
-    </div>
+
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Channel')}:</label>
         <div class="col-xs-12 col-sm-8">
@@ -48,30 +31,7 @@
             <input id="c-is_auto_renew" data-rule="required" min="0" class="form-control" name="row[is_auto_renew]" type="number" value="{$row.is_auto_renew|htmlentities}">
         </div>
     </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Record_nums')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-record_nums" min="0" class="form-control" name="row[record_nums]" type="number" value="{$row.record_nums|htmlentities}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Latest_time')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-latest_time" data-rule="required" min="0" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[latest_time]" type="text" value="{:$row.latest_time?datetime($row.latest_time):''}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Create_time')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-create_time" data-rule="required" min="0" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[create_time]" type="text" value="{:$row.create_time?datetime($row.create_time):''}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Update_time')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-update_time" data-rule="required" min="0" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[update_time]" type="text" value="{:$row.update_time?datetime($row.update_time):''}">
-        </div>
-    </div>
+
     <div class="form-group layer-footer">
         <label class="control-label col-xs-12 col-sm-2"></label>
         <div class="col-xs-12 col-sm-8">
